syntax = "proto3";

package auth;

option go_package = "generated/proto/auth";

service AuthService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);

    rpc SignIn(SignInRequest) returns (SignInResponse);

    rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

/// Domain model ///
message User {
    uint64 id = 1;
    string username = 2;
    string email = 3;
}

/// Sign in ///
message SignInRequest {
    string email = 1;
    string password = 2;
} 
message SignInResponse {
    string tokenStr = 1;
    string error = 2;
    User user = 3;
}


/// Sign Up ///
message SignUpRequest {
    string username = 1;
    string email = 2;
    string password = 3;
} 
message SignUpResponse {
    string tokenStr = 1;
    string error = 2;
    User user = 3;
}


/// Check Token ///
message CheckTokenRequest {
    string tokenStr = 1; 
}
message CheckTokenResponse {
    string status = 1;
    string error = 2;
}
